--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "kasa-react",
+  "name": "HRnet",
   "private": true,
   "version": "0.0.0",
   "type": "module",
@@ -10,6 +10,7 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "ag-grid-react": "^31.0.3",
     "react": "^18.2.0",
     "react-datepicker": "^6.1.0",
     "react-dom": "^18.2.0",
