--- a/package.json
+++ b/package.json
@@ -5,18 +5,22 @@
   "type": "module",
   "scripts": {
     "dev": "vite",
-    "build": "vite build",
+    "build": "vite build && npm-run-all generate-sitemap",
     "lint": "eslint . --ext js,jsx --report-unused-disable-directives --max-warnings 0",
-    "preview": "vite preview"
+    "preview": "vite preview",
+    "generate-sitemap": "node generate-sitemap.cjs"
   },
   "dependencies": {
     "ag-grid-react": "^31.0.3",
     "modalia": "^1.0.8",
+    "npm-run-all": "^4.1.5",
+    "path": "^0.12.7",
     "react": "^18.2.0",
     "react-datepicker": "^6.1.0",
     "react-dom": "^18.2.0",
     "react-router-dom": "^6.15.0",
-    "shortid": "^2.2.16"
+    "shortid": "^2.2.16",
+    "sitemap-generator": "^8.5.1"
   },
   "devDependencies": {
     "@types/react": "^18.2.15",
