--- a/package.json
+++ b/package.json
@@ -18,7 +18,10 @@
     "react": "^18.2.0",
     "react-datepicker": "^6.1.0",
     "react-dom": "^18.2.0",
+    "react-redux": "^9.1.0",
     "react-router-dom": "^6.15.0",
+    "redux": "^5.0.1",
+    "reselect": "^5.1.0",
     "shortid": "^2.2.16",
     "sitemap-generator": "^8.5.1"
   },
